--- a/card.html
+++ b/card.html
@@ -7,18 +7,18 @@
 <body>
 	<div>
 		<!-- your favorite animal's name goes here -->
-		<h3>Animal's name</h3>
+		<h3>Lynx</h3>
 		<!-- your favorite animal's image goes here -->
-		<img src="placeholder.png" alt="name-of-your-animal">
+		<img src="lynx.png" alt="lynx">
 		<div>
 			<!-- your favorite animal's interesting fact goes here -->
-			<p>Write an interesting fact about your favorite animal...</p>
+			<p>The lynx is a solitary cat that haunts the remote northern forests of North America, Europe, and Asia. Lynx are covered with beautiful thick fur that keeps them warm during frigid winters. Their large paws are also furry and hit the ground with a spreading toe motion that makes them function as natural snowshoes. Some more interesting facts are :</p>
 			<ul>
 				<!-- your favorite animal's list items go here -->
-				<li><span>Label</span>: Item #1</li>
-				<li><span>Label</span>: Item #2</li>
-				<li><span>Label</span>: Item #3</li>
-				<li><span>Label</span>: Item #4</li>
+				<li><span>Lynx lynx</span>: Eurasian Lynx from Europe and Siberia</li>
+				<li><span>Lynx canadensis</span>: Canadian Lynx from Canada and Alaska</li>
+				<li><span>Lynx pardinus</span>: Iberian Lynx from Southern Europe</li>
+				<li><span>Lynx rufus</span>: Bobcat from North America</li>
 			</ul>
 			<!-- your favorite animal's description goes here -->
 			<p>Write a brief description about your favorite animal...</p>
