added style 	modified:   card.html 	deleted:    lynx.jpg 	modified:   styles.css

--- a/card.html
+++ b/card.html
@@ -3,25 +3,26 @@
 <head>
 	<meta charset="utf-8">
 	<title>Animal Trading Cards</title>
+	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-	<div>
+	<div class="card borderwithshadow">
 		<!-- your favorite animal's name goes here -->
 		<h3>Lynx</h3>
 		<!-- your favorite animal's image goes here -->
-		<img src="lynx.png" alt="lynx">
-		<div>
+		<img src="lynx.png" alt="lynx" class="cardimage">
+		<div class=borderwithoutshadow>
 			<!-- your favorite animal's interesting fact goes here -->
-			<p>The lynx is a solitary cat that haunts the remote northern forests of North America, Europe, and Asia. Lynx are covered with beautiful thick fur that keeps them warm during frigid winters. Their large paws are also furry and hit the ground with a spreading toe motion that makes them function as natural snowshoes. Some more interesting facts are :</p>
-			<ul>
+			<p class="italictext"> Lynx has a natural hearing aid i.e. a weird tuft of hair on its ears!</p>
+			<ul class="liststyle">
 				<!-- your favorite animal's list items go here -->
-				<li><span>Lynx lynx</span>: Eurasian Lynx from Europe and Siberia</li>
-				<li><span>Lynx canadensis</span>: Canadian Lynx from Canada and Alaska</li>
-				<li><span>Lynx pardinus</span>: Iberian Lynx from Southern Europe</li>
-				<li><span>Lynx rufus</span>: Bobcat from North America</li>
+			<li><span>Lynx lynx</span>: Eurasian Lynx</li>
+			<li><span>Lynx canadensis</span>: Canadian Lynx</li>
+			<li><span>Lynx pardinus</span>: Iberian Lynx</li>
+			<li><span>Lynx rufus</span>: American Bobcat</li>
 			</ul>
 			<!-- your favorite animal's description goes here -->
-			<p>Write a brief description about your favorite animal...</p>
+			<p>The lynx is a solitary cat that haunts the remote northern forests of North America, Europe, and Asia. Lynx are covered with beautiful thick fur that keeps them warm during frigid winters. Their large paws are also furry and hit the ground with a spreading toe motion that makes them function as natural snowshoes.</p>
 		</div>
 	</div>
 </body>
